bundled_metadata/force-app/main/default/objects/Feature_Policy__c/Feature_Policy__c.object-meta.xml
<CustomObject>
    <label>Feature Policy</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>