bundled_metadata/force-app/main/default/objects/Feature_Policy__c/fields/Feature_Id__c.field-meta.xml
<CustomField>
    <fullName>Feature_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature Id</label>
    <referenceTo>Feature_Definition__c</referenceTo>
    <relationshipLabel>Feature Policies</relationshipLabel>
    <relationshipName>Feature_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>