bundled_metadata/force-app/main/default/objects/Feature_Policy__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <formula>Feature_Id__r.Feature_Id__c</formula>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>