bundled_metadata/force-app/main/default/objects/Feature_Policy__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EUSFA_Persona</valueSetName>
    </valueSet>
</CustomField>