bundled_metadata/force-app/main/default/objects/Feature_Policy__c/fields/Use_Default__c.field-meta.xml
<CustomField>
    <fullName>Use_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default</label>
    <type>Checkbox</type>
</CustomField>