bundled_metadata/force-app/main/default/objects/Feature_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Active__c</columns>
    <columns>Feature_Id__c</columns>
    <columns>Market__c</columns>
    <columns>Persona__c</columns>
    <columns>Use_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>